Added saving files to the directory